modules/vms/provision/roles/kubernetes/files/storage/rook/2-rook-cluster.yml
apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - http:
      paths:
      - path: /ceph
        backend:
          serviceName: rook-ceph-mgr-dashboard
          servicePort: 8443
